--- a/WebDesign.html
+++ b/WebDesign.html
@@ -44,6 +44,7 @@
 <h2>Student Web Pages</h2>
 <ul>
 <li><a href="http://www.google.com"target="_blank">example!</a></li>
+<li><a href="http://thechronicle.comoj.com/"target="_blank">Dexter B</a></li>
 <li><a href="http://www.fooshing.site88.net"target="_blank">Allen Rafulowitz</a></li>
 
 </ul>
