--- a/WebDesign.html
+++ b/WebDesign.html
@@ -49,6 +49,7 @@
 <li><a href="http://www.german.comoj.com"target="_blank">German_Beltran</a></li>
 <li><a href="http://dremgirl.in/home.html"target="_blank">Viki Bailey</a></li>
 <li><a href="http://czarchavez.comuf.com/"target="_blank">Julio Chavez</a></li>
+<li><a href="http://rachelbazelais.com/test/p1/writer.html" target="_blank">Rachel!</a></li>
 </ul>
 </div>
 </div>
