--- a/WebDesign.html
+++ b/WebDesign.html
@@ -50,6 +50,8 @@
 <li><a href="http://dremgirl.in/home.html"target="_blank">Viki Bailey</a></li>
 <li><a href="http://czarchavez.comuf.com/"target="_blank">Julio Chavez</a></li>
 <li><a href="http://rachelbazelais.com/test/p1/writer.html" target="_blank">Rachel!</a></li>
+<li><a href="http://www.deadfilm.com"target="_blank">Michael Budhu</a></li>
+<li><a href="http://www.ginamarta.comyr.com/gihan"target="_blank">Gihan Bekhit</a></li>
 </ul>
 </div>
 </div>
