--- a/WebDesign.html
+++ b/WebDesign.html
@@ -53,6 +53,7 @@
 <li><a href="http://www.deadfilm.com"target="_blank">Michael Budhu</a></li>
 <li><a href="http://www.ginamarta.comyr.com/gihan"target="_blank">Gihan Bekhit</a></li>
 <li><a href="http://www.lissygonzalez.site88.net"target="_blank">Lissy Gonzalez</a></li>
+<li><a href="http://www.eunjijo.com"target="_blank">Eunji Jo</a></li>
 
 </ul>
 </div>
