--- a/WebDesign.html
+++ b/WebDesign.html
@@ -54,6 +54,7 @@
 <li><a href="http://www.ginamarta.comyr.com/gihan"target="_blank">Gihan Bekhit</a></li>
 <li><a href="http://www.lissygonzalez.site88.net"target="_blank">Lissy Gonzalez</a></li>
 <li><a href="http://www.eunjijo.com"target="_blank">Eunji Jo</a></li>
+<li><a href="http://insidegaming.netai.net/Gamingpage.html"target="_blank">Alex Fernandez</a></li>
 
 </ul>
 </div>
