--- a/WebDesign.html
+++ b/WebDesign.html
@@ -55,6 +55,7 @@
 <li><a href="http://www.lissygonzalez.site88.net"target="_blank">Lissy Gonzalez</a></li>
 <li><a href="http://www.eunjijo.com"target="_blank">Eunji Jo</a></li>
 <li><a href="http://insidegaming.netai.net/Gamingpage.html"target="_blank">Alex Fernandez</a></li>
+<li><a href="http://www.restoretherapy.webege.com"target="_blank">Stacy Reddy</a></li>
 
 </ul>
 </div>
