--- a/WebDesign.html
+++ b/WebDesign.html
@@ -56,6 +56,7 @@
 <li><a href="http://www.eunjijo.com"target="_blank">Eunji Jo</a></li>
 <li><a href="http://insidegaming.netai.net/Gamingpage.html"target="_blank">Alex Fernandez</a></li>
 <li><a href="http://www.restoretherapy.webege.com"target="_blank">Stacy Reddy</a></li>
+<li><a href="http://www.takashidesigns.com"target="_blank">Tashi Sherpa</a></li>
 
 </ul>
 </div>
