--- a/WebDesign.html
+++ b/WebDesign.html
@@ -58,6 +58,7 @@
 <li><a href="http://www.restoretherapy.webege.com"target="_blank">Stacy Reddy</a></li>
 <li><a href="http://www.takashidesigns.com"target="_blank">Tashi Sherpa</a></li>
 <li><a href="http://www.rehamothman94.comxa.com"target="_blank">Reham Othman</a></li>
+<li><a href="http://www.meritasdesignpage.com"target="_blank">Merita Celija</a></li>
 
 </ul>
 </div>
